log
Wed, Mar 19, 2025  8:39:14 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  9:27:10 AM: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:50:16: error: 'elemento' undeclared (first use in this function)
    pushBack(L, elemento) ;
                ^~~~~~~~
exercises.c:50:16: note: each undeclared identifier is reported only once for each function it appears in
exercises.c: In function 'sumaLista':
exercises.c:61:23: error: comparison between pointer and integer [-Werror]
    for (int k = 0 ; k != NULL ; k++){
                       ^~
exercises.c:62:7: error: invalid use of undefined type 'struct List'
       cont += L[k] ;
       ^~~~
exercises.c:62:16: error: dereferencing pointer to incomplete type 'List {aka struct List}'
       cont += L[k] ;
                ^
cc1.exe: all warnings being treated as errors
Compilation failed
f4d2892
